--- a/application/views/index.html.twig
+++ b/application/views/index.html.twig
@@ -1,1 +1,10 @@
 {%extends "header.html.twig" %}
+
+{%block contenue %}
+<!--Carroussel-->
+<div class="hero-unit">
+    <h1>{{carroussel.titre}}</h1>
+    <p>{{carroussel.contenue}}</p>
+    <p><a href="#" class="btn btn-primary btn-large">En savoir plus &raquo;</a></p>
+</div>
+{%endblock%}
