Ajout du système de news

--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -37,7 +37,8 @@
                         <ul class="nav nav-list">
                             <li class="nav-header">Navigation</li>
                             <li><a href="#">Accueil</a></li>
-                            <li><a href="#">Calendrier</a></li>                            
+                            <li><a href="#">Calendrier</a></li>
+                            <li><a href="#">À propos de Chorut's</a></li>
                             <li class="nav-header">Pour les choristes</li>
                             <li><a href="#">Dernières réunions</a></li>
                             <li><a href="#">Partage de fichiers</a></li>
