--- a/application/views/index.html.twig
+++ b/application/views/index.html.twig
@@ -7,4 +7,17 @@
     <p>{{carroussel.contenue}}</p>
     <p><a href="#" class="btn btn-primary btn-large">En savoir plus &raquo;</a></p>
 </div>
+
+<div class="row-fluid">
+    <h1 class="text-center">Dernières nouvelles</h1>
+    
+    {%for new in news%}
+    <div class="row-fluid well">
+        <h3 class="text-center">{{new.titre}}</h3>
+        <p>{{new.contenue}}</p>
+        <p class="text-right">Par {{new.prenom}} {{new.nom}}, le {{new.date}}</p>
+    </div>
+    {%endfor%}
+    
+</div>
 {%endblock%}
