--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -23,7 +23,19 @@
                  </ul>
                 <ul class="nav pull-right">
                     {%if logged_in == true %}
-                        <li>Connecté en tant que {{login}}</li>
+                        <li>
+                            <ul class="nav pull-right">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        {{login}}
+                                    </a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="#">Mon compte</a></li>
+                                        <li><a href="{{login_url}}logout.php?appli={{login_appli}}">Deconnexion</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
                     {%else%}
                         <li><a href="{{login_url}}auth.php/?appli={{login_appli}}">Se connecter</a></li>
                     {%endif%}
