--- a/application/views/index.html.twig
+++ b/application/views/index.html.twig
@@ -12,7 +12,7 @@
     <h1 class="text-center">Dernières nouvelles</h1>
     
     {%for new in news%}
-    <div class="row-fluid well">
+    <div class="well">
         <h3 class="text-center">{{new.titre}}</h3>
         <p>{{new.contenue}}</p>
         <p class="text-right">Par {{new.prenom}} {{new.nom}}, le {{new.date}}</p>
