Formulaire d'ajout de news

--- a/application/views/adminpanel-index.html.twig
+++ b/application/views/adminpanel-index.html.twig
@@ -18,7 +18,7 @@
 <div class="row-fluid">
     <div class="well span12">
         <h2 class="text-center">Les news</h2>
-        <a href="#" class="btn btn-success"><i class="icon-plus icon-white"></i> Publier une news</a><br/><br/>
+        <a href="{{base_url}}/adminpanel/addnews" class="btn btn-success"><i class="icon-plus icon-white"></i> Publier une news</a><br/><br/>
         <table class="table">
             <tr>
                 <th>Titre</th>
