--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Bienvenue sur le site de chorut's</title>
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
-        <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css"/>
+        <link rel="stylesheet" href="{{base_url}}/bootstrap/css/bootstrap.css"/>
+        <link rel="stylesheet" href="{{base_url}}/bootstrap/css/bootstrap-responsive.min.css"/>
         <meta charset="utf8">
     </head>
     
@@ -68,7 +68,7 @@
          </div>
             
          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.js"></script>
+        <script src="{{base_url}}/bootstrap/js/bootstrap.js"></script>
     </body>
 </html>
         
