--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="{{base_url}}/bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="{{base_url}}/bootstrap/css/bootstrap-responsive.min.css"/>
         <meta charset="utf8">
+        {%block header%}
+        {%endblock%}
     </head>
     
     <body>
