--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -29,17 +29,17 @@
                             <ul class="nav pull-right">
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        {{login}}
+                                        {{prenom}} {{nom}}
                                     </a>
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a href="#">Mon compte</a></li>
-                                        <li><a href="{{login_url}}logout.php?appli={{login_appli}}">Deconnexion</a></li>
+                                        <li><a href="{{base_url}}/auth/logout">Deconnexion</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                     {%else%}
-                        <li><a href="{{login_url}}auth.php/?appli={{login_appli}}">Se connecter</a></li>
+                        <li><a href="{{base_url}}/auth/login">Se connecter</a></li>
                     {%endif%}
                 </ul>
             </div>
