--- a/application/views/newsForm.html.twig
+++ b/application/views/newsForm.html.twig
@@ -5,10 +5,13 @@
 <h3 class="text-center">Publier une news</h3>
 {#Editer une news #}
 
-<form method="post" action="{{base_url}}/adminpanel/publishnews">
-    <p>Titre : <input type="text" name="news_title"/></p>
-    <textarea style="width: 100%;" name="news_content" rows="5"></textarea>
-    <input type="submit" value="Publier" class="btn btn-primary"/>
+<form method="post" {%if edit %} action="{{base_url}}/adminpanel/updatenews" {%else%} action="{{base_url}}/adminpanel/publishnews" {%endif%}>
+    {%if edit %}
+        <input type="hidden" name="news_id" value="{{edit}}"/>
+    {%endif%}
+    <p>Titre : <input type="text" name="news_title" value="{{news.titre}}"/></p>
+    <textarea style="width: 100%;" name="news_content" rows="5">{{news.contenue}}</textarea>
+    <input type="submit" {%if edit %} value="Mettre à jour" {%else%} value="Publier" {%endif%} class="btn btn-primary"/>
 </form>
 
 <p>Utiliser le BBCODE pour mettre en forme la news. Exemple :</p>
