--- a/application/views/adminpanel-index.html.twig
+++ b/application/views/adminpanel-index.html.twig
@@ -31,7 +31,7 @@
                 <td>{{new.titre}}</td>
                 <td>{{new.prenom}} {{new.nom}}</td>
                 <td>{{new.date}}</td>
-                <td><a href="{{base_url}}/adminpanel/editNews/{{new.id}}" class="btn btn-warning"><i class="icon-pencil icon-white"></i> Editer</a> <a href="#" class="btn btn-danger"><i class="icon-remove icon-white"></i> Supprimer</a></td>
+                <td><a href="{{base_url}}/adminpanel/editNews/{{new.id}}" class="btn btn-warning"><i class="icon-pencil icon-white"></i> Editer</a> <a href="{{base_url}}/adminpanel/delnews/{{new.id}}" class="btn btn-danger"><i class="icon-remove icon-white"></i> Supprimer</a></td>
             </tr>
             {%endfor%}
         </table>
