Corrige quelques liens

--- a/application/views/adminpanel.html.twig
+++ b/application/views/adminpanel.html.twig
@@ -4,8 +4,9 @@
 <div class="well sidebar-nav">
     <ul class="nav nav-list">
         <li class="nav-header">Menu d'administration</li>
-        <li><a href="#">Page d'accueil</a></li>
+        <li><a href="{{base_url}}/adminpanel">Page d'accueil</a></li>
         <li><a href="#">À propos</a></li>
+        <li><a href="{{base_url}}/adminpanel/users">Gestion des utilisateurs</a></li>
     </ul>
 </div>
 {%endblock%}
