--- a/application/views/adminpanel-users.html.twig
+++ b/application/views/adminpanel-users.html.twig
@@ -3,7 +3,7 @@
 {%block contenue%}
 <h1 class="text-center">Gestion des utilisateurs</h1>
 
-<a href="{{base_url}}/adduser" class="btn btn-success"><i class="icon-plus icon-white"></i> Ajouter un utilisateur</a>
+<a href="{{base_url}}/adminpanel/adduser" class="btn btn-success"><i class="icon-plus icon-white"></i> Ajouter un utilisateur</a>
 
 <div class="pagination">
     <ul>
@@ -27,7 +27,7 @@
     
     {%for user in users %}
     <tr>
-        <td><a href="{{base_url}}/user/profile/{{user.id}}">{{user.user}}</a></td>
+        <td><a href="{{base_url}}/users/profile/{{user.id}}">{{user.user}}</a></td>
         <td>{{user.prenom}}</td>
         <td>{{user.nom}}</td>
         <td>{{user.mail}}</td>
