--- a/application/views/adminpanel.html.twig
+++ b/application/views/adminpanel.html.twig
@@ -7,6 +7,7 @@
         <li><a href="{{base_url}}/adminpanel">Page d'accueil</a></li>
         <li><a href="#">À propos</a></li>
         <li><a href="{{base_url}}/adminpanel/users">Gestion des utilisateurs</a></li>
+        <li><a href="{{base_url}}/adminpanel/groups">Gestion des groupes</a></li>
     </ul>
 </div>
 {%endblock%}
