--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -57,10 +57,16 @@
                             <li class="nav-header">Pour les choristes</li>
                             <li><a href="#">Dernières réunions</a></li>
                             <li><a href="#">Partage de fichiers</a></li>
+                            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AvThPhkPWyHvdFZ6a004OUhHNWJGTGZITXlfNXdJSGc&usp=sharing">Idées proposées</a>
                         </ul>
-                    </div>
+                    </div>                    
+                    
                     {%block menu %}
                     {%endblock%}
+                    
+                    <div class="span2">
+                        <iframe src="https://docs.google.com/forms/d/1FAwuiAQOfTnA6O-y0EUUmHMfwYLKhrv0PLQRi39ZPWI/viewform?embedded=true" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
+                    </div>
                 </div>                
                 <div class="span9">
                     {%block contenue %}
