--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -54,19 +54,23 @@
                             <li><a href="#">Accueil</a></li>
                             <li><a href="#">Calendrier</a></li>
                             <li><a href="#">À propos de Chorut's</a></li>
-                            <li class="nav-header">Pour les choristes</li>
+                            {%if view_private_part == true %}
+                            <li class="nav-header">Pour les choristes</li>                            
                             <li><a href="#">Dernières réunions</a></li>
                             <li><a href="#">Partage de fichiers</a></li>
-                            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AvThPhkPWyHvdFZ6a004OUhHNWJGTGZITXlfNXdJSGc&usp=sharing">Idées proposées</a>
+                            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AvThPhkPWyHvdFZ6a004OUhHNWJGTGZITXlfNXdJSGc&usp=sharing">Idées proposées</a></li>
+                            {%endif%}
                         </ul>
                     </div>                    
                     
                     {%block menu %}
                     {%endblock%}
                     
+                    {%if view_private_part == true %}
                     <div class="span2">
                         <iframe src="https://docs.google.com/forms/d/1FAwuiAQOfTnA6O-y0EUUmHMfwYLKhrv0PLQRi39ZPWI/viewform?embedded=true" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
                     </div>
+                    {%endif%}
                 </div>                
                 <div class="span9">
                     {%block contenue %}
