--- a/application/views/adminpanel-groups.html.twig
+++ b/application/views/adminpanel-groups.html.twig
@@ -5,7 +5,7 @@
 
 <p>Les groupes utilisateur permettent d'accorder des autorisations spéciales à certains membres du site</p>
 
-<a href="#" class="btn btn-success"><i class="icon-plus icon-white"></i> Ajouter</a><br/><br/>
+<a href="{{base_url}}/adminpanel/addgroup" class="btn btn-success"><i class="icon-plus icon-white"></i> Ajouter</a><br/><br/>
 
 <table class="table">
     {%for group in groups %}
