Ajoute le bbcode dans le carroussel (close #5)

--- a/application/views/index.html.twig
+++ b/application/views/index.html.twig
@@ -4,7 +4,7 @@
 <!--Carroussel-->
 <div class="hero-unit">
     <h1 class="text-center">{{carroussel.titre}}</h1>
-    <p>{{carroussel.contenue}}</p>
+    <p>{{carroussel.contenue|raw}}</p>
     <p><a href="#" class="btn btn-primary btn-large">En savoir plus &raquo;</a></p>
 </div>
 
