Ajout de la page à propos

--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -53,7 +53,7 @@
                             <li class="nav-header">Navigation</li>
                             <li><a href="#">Accueil</a></li>
                             <li><a href="#">Calendrier</a></li>
-                            <li><a href="#">À propos de Chorut's</a></li>
+                            <li><a href="{{base_url}}/choruts/apropos">À propos de Chorut's</a></li>
                             {%if view_private_part == true %}
                             <li class="nav-header">Pour les choristes</li>                            
                             <li><a href="#">Dernières réunions</a></li>
