--- a/application/views/index.html.twig
+++ b/application/views/index.html.twig
@@ -5,7 +5,7 @@
 <div class="hero-unit">
     <h1 class="text-center">{{carroussel.titre}}</h1>
     <p>{{carroussel.contenue|raw}}</p>
-    <p><a href="#" class="btn btn-primary btn-large">En savoir plus &raquo;</a></p>
+    <p><a href="{{base_url}}/choruts/apropos" class="btn btn-primary btn-large">En savoir plus &raquo;</a></p>
 </div>
 
 <div class="row-fluid">
