--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -65,17 +65,16 @@
                     
                     {%block menu %}
                     {%endblock%}
-                    
-                    {%if view_private_part == true %}
-                    <div class="span2">
-                        <iframe src="https://docs.google.com/forms/d/1FAwuiAQOfTnA6O-y0EUUmHMfwYLKhrv0PLQRi39ZPWI/viewform?embedded=true" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
-                    </div>
-                    {%endif%}
                 </div>                
                 <div class="span9">
                     {%block contenue %}
                     {%endblock%}
-                </div>                
+                    
+                    {%if view_private_part == true %}                    
+                        <iframe src="https://docs.google.com/forms/d/1FAwuiAQOfTnA6O-y0EUUmHMfwYLKhrv0PLQRi39ZPWI/viewform?embedded=true" width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>                   
+                   {%endif%}
+                </div>
+                
             </div> 
          </div>
         
