Ajout d'un lien dans le paneeau d'administration

--- a/application/views/adminpanel.html.twig
+++ b/application/views/adminpanel.html.twig
@@ -5,7 +5,7 @@
     <ul class="nav nav-list">
         <li class="nav-header">Menu d'administration</li>
         <li><a href="{{base_url}}/adminpanel">Page d'accueil</a></li>
-        <li><a href="#">À propos</a></li>
+        <li><a href="{{base_url}}/adminpanel/apropos">À propos</a></li>
         <li><a href="{{base_url}}/adminpanel/users">Gestion des utilisateurs</a></li>
         <li><a href="{{base_url}}/adminpanel/groups">Gestion des groupes</a></li>
     </ul>
