--- a/application/views/adminpanel-users.html.twig
+++ b/application/views/adminpanel-users.html.twig
@@ -32,7 +32,7 @@
         <td>{{user.prenom}}</td>
         <td>{{user.nom}}</td>
         <td>{{user.mail}}</td>
-        <td>La photo</td>
+        <td>{%if user.password=="CAS" %} <img src="https://demeter.utc.fr/pls/portal30/portal30.get_photo_utilisateur?username={{user.user}}" width="100px"/> {%else%} Photo non disponible {%endif%}</td>
     </tr>
     {%endfor%}
 </table>
