--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -59,6 +59,8 @@
                             <li><a href="#">Dernières réunions</a></li>
                             <li><a href="#">Partage de fichiers</a></li>
                             <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AvThPhkPWyHvdFZ6a004OUhHNWJGTGZITXlfNXdJSGc&usp=sharing">Idées proposées</a></li>
+                            <li><a href="{{base_url}}/files/">OwnCloud</a></li>
+                            <li><a href="http://choruts-rdvamidi.no-ip.org/">OwnCloud d'Amaury</a></li>
                             {%endif%}
                         </ul>
                     </div>                    
