Petit lifting de la connexion + base du gestionnaire de fichier

--- a/application/views/adminpanel-groupedetail.html.twig
+++ b/application/views/adminpanel-groupedetail.html.twig
@@ -11,6 +11,8 @@
         <tr><td> <input type="checkbox" id="right-edit-members" name="right-edit-members" {%if right_edit_members==true %} checked="checked" {%endif%}> <label for="right-edit-members">Peut éditer le profil des membres</label></td></tr>
         <tr><td> <input type="checkbox" id="right-member-part" name="right-member-part" {%if right_member_part==true %} checked="checked" {%endif%}> <label for="right-member-part">Peut voir les parties privées du site</label></td></tr>
         <tr><td> <input type="checkbox" id="right-publish-news" name="right-publish-news" {%if right_publish_news==true %} checked="checked" {%endif%}> <label for="right-publish-news">Peut publier des news (Non implanter)</label></td></tr>
+        <tr><td> <input type="checkbox" id="right-view-files" name="right-view-files" {%if right_view_files==true %} checked="checked" {%endif%}> <label for="right-publish-news">Voir les fichier partagés</label></td></tr>
+        <tr><td> <input type="checkbox" id="right-edit-files" name="right-edit-files" {%if right_edit_files==true %} checked="checked" {%endif%}> <label for="right-publish-news">Peut modifier les fichiers partagés</label></td></tr>
     </table>
     
     <input type="submit" class="btn btn-primary" value="Editer le groupe"/>
