--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -13,7 +13,7 @@
         <!--Barre de navigation-->
         <div class="navbar">
             <div class="navbar-inner">
-                <a class="brand" href="#">Chorut's</a>
+                <a class="brand" href="{{base_url}}">Chorut's</a>
                 <ul class="nav">
                     <li {%if is_admin_panel != 1 %} class="active" {%endif%}><a href="{{base_url}}">Accueil</a></li>
                     {%if admin_panel_acces == 1 %}
@@ -73,7 +73,7 @@
                     {%endblock%}
                     
                     {%if view_private_part == true %}                    
-                        <iframe src="https://docs.google.com/forms/d/1FAwuiAQOfTnA6O-y0EUUmHMfwYLKhrv0PLQRi39ZPWI/viewform?embedded=true" width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>                   
+                        <iframe src="http://goo.gl/forms/bfM8tvP2hc" width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>                   
                    {%endif%}
                 </div>
                 
@@ -86,6 +86,8 @@
             
          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="{{base_url}}/bootstrap/js/bootstrap.js"></script>
+        {%block scripts%}
+        {%endblock%}
     </body>
 </html>
         
