--- a/application/views/login-form.html.twig
+++ b/application/views/login-form.html.twig
@@ -1,11 +1,14 @@
 {%extends "header.html.twig"%}
 
 {%block contenue %}
-<div class="offset4 well span4">
-    <h2 class="text-center">Connexion</h2>
+
+<h2 class="text-center">Connexion</h2>
+<div class="offset4 well span4">    
     
     <h3 class="text-center"><a href="{{base_url}}/auth/cas">Je suis étudiant ou membre du personnel de l'UTC</a></h3>
-    
+</div>
+<div class="offset4 well span4">
+    <p><b>Sinon</b></p>
     {%if error == 1 %}
     <p class="text-error">Les informations indiquées ne permettent pas de vous authentifier</p>
     {%endif%}
