--- a/application/views/header.html.twig
+++ b/application/views/header.html.twig
@@ -57,10 +57,8 @@
                             {%if view_private_part == true %}
                             <li class="nav-header">Pour les choristes</li>                            
                             <li><a href="#">Dernières réunions</a></li>
-                            <li><a href="#">Partage de fichiers</a></li>
-                            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AvThPhkPWyHvdFZ6a004OUhHNWJGTGZITXlfNXdJSGc&usp=sharing">Idées proposées</a></li>
-                            <li><a href="{{base_url}}/files/">OwnCloud</a></li>
-                            <li><a href="http://choruts-rdvamidi.no-ip.org/">OwnCloud d'Amaury</a></li>
+                            <li><a href="{{base_url}}/files">Partage de fichiers</a></li>
+                            <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AvThPhkPWyHvdFZ6a004OUhHNWJGTGZITXlfNXdJSGc&usp=sharing">Idées proposées</a></li>                            
                             {%endif%}
                         </ul>
                     </div>                    
